--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-“Hello, world”
+<!DOCTYPE html>
+<!-- The first two letters specify the language (en)
+If there is a dialect, use two more letters (US) -->
+<html lang="en-US"> 
+
+<html>
+<head>
+<title>Hello world</title>
+<link herf= "stylesheet.css" rel="stylesheet"/>
+</head>
+<body>
+
+<!-- 
+<a href="http://www.w3schools.com/html/html_basic.asp">The basic: headings, paragraphs, links, images</a>
+<a href="http://www.w3schools.com/tags/tag_comment.asp">Comments in html<a>
+ -->
+<!-- <p> <img id="myImage" onclick="changeImage()" src="Demon_Devil_Bats.jpg" alt="Test Picture" width="100" height="100"> </p> -->
+
+<div style = "background-color: #729f98 ;padding:50px;"></div>
+<div style = "background-color: #283018 ;padding:50px;"></div>
+<div style = "background-color: #aa863a ;padding:50px;"></div>
+<div style = "background-color: #f0eceb ;padding:50px;"></div>
+<div style = "background-color: #729f98 ;padding:50px;"></div>
+<div style = "background-color: #283018 ;padding:50px;"></div>
+<div style = "background-color: #aa863a ;padding:50px;"></div>
+
+
+</body>
+</html>
